sandbox-codebase/objects/Case/fields/Account_Billing_Model__c.field-meta.xml
<CustomField>
    <fullName>Account_Billing_Model__c</fullName>
    <formula>TEXT(Provider_Account__r.Billing_Model__c)</formula>
    <label>Account Billing Model</label>
    <type>Text</type>
</CustomField>