sandbox-codebase/objects/Case/fields/Address_Confirmed_Date__c.field-meta.xml
<CustomField>
    <fullName>Address_Confirmed_Date__c</fullName>
    <label>Address Confirmed Date</label>
    <type>DateTime</type>
</CustomField>