sandbox-codebase/objects/Case/fields/Billable_Decision_Date__c.field-meta.xml
<CustomField>
    <fullName>Billable_Decision_Date__c</fullName>
    <label>Billable Decision Date</label>
    <type>DateTime</type>
</CustomField>