sandbox-codebase/objects/Case/fields/Billable_Status__c.field-meta.xml
<CustomField>
    <fullName>Billable_Status__c</fullName>
    <label>Billable Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Billable</fullName>
            </value>
            <value>
                <fullName>Unbillable</fullName>
            </value>
            <value>
                <fullName>Lost Pod - Shipping</fullName>
                <isActive>false</isActive>
                <label>Lost Pod - Shipping</label>
            </value>
            <value>
                <fullName>Lost Pod - Unresponsive Patient</fullName>
                <isActive>false</isActive>
                <label>Lost Pod - Unresponsive Patient</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>