sandbox-codebase/objects/Case/fields/Billable_Studies__c.field-meta.xml
<CustomField>
    <fullName>Billable_Studies__c</fullName>
    <label>Billable Studies</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>