sandbox-codebase/objects/Case/fields/Demo__c.field-meta.xml
<CustomField>
    <fullName>Demo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if the order is for a demo</description>
    <inlineHelpText>Check this box if the order is a demo order</inlineHelpText>
    <label>Demo</label>
    <type>Checkbox</type>
</CustomField>