sandbox-codebase/objects/Case/fields/Express_Order__c.field-meta.xml
<CustomField>
    <fullName>Express_Order__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Express_Order</label>
    <type>Checkbox</type>
</CustomField>