sandbox-codebase/objects/Case/fields/heymarket__Is_From_heymarket__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Is_From_heymarket__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the case is created from Heymarket SMS then it will be set to true. Otherwise, false by default</description>
    <label>Is_From_heymarket</label>
    <type>Checkbox</type>
</CustomField>