sandbox-codebase/objects/Case/fields/heymarket__Phone__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Phone__c</fullName>
    <label>Phone</label>
    <length>20</length>
    <type>Text</type>
</CustomField>