sandbox-codebase/objects/Case/fields/Interpreting_Physician__c.field-meta.xml
<CustomField>
    <fullName>Interpreting_Physician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interpreting Physician</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Value does not exist or does not match filter criteria. The Interpreting Physician should not be a person account.</errorMessage>
        <filterItems>
            <field>Contact.IsPersonAccount</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases (Interpreting Physician)</relationshipLabel>
    <relationshipName>CasesInterpretingPhysician</relationshipName>
    <type>Lookup</type>
</CustomField>