sandbox-codebase/objects/Case/fields/MultiNight_Study__c.field-meta.xml
<CustomField>
    <fullName>MultiNight_Study__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MultiNight Study</label>
    <type>Checkbox</type>
</CustomField>