sandbox-codebase/objects/Case/fields/Next_Action__c.field-meta.xml
<CustomField>
    <fullName>Next_Action__c</fullName>
    <description>Next Action for Message Flow</description>
    <inlineHelpText>Next Action for Message Flow</inlineHelpText>
    <label>Next Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WaitingForOpt-in</fullName>
                <default>true</default>
                <label>WaitingForOpt-in</label>
            </value>
            <value>
                <fullName>ADDR_1A</fullName>
            </value>
            <value>
                <fullName>WaitingConfirmationADDR_1A</fullName>
            </value>
            <value>
                <fullName>ADDR_2A</fullName>
            </value>
            <value>
                <fullName>WaitingConfirmationADDR_2A</fullName>
            </value>
            <value>
                <fullName>ADDR_1B</fullName>
            </value>
            <value>
                <fullName>WaitingConfirmationTEST_3A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>