sandbox-codebase/objects/Case/fields/NON_WORKING__c.field-meta.xml
<CustomField>
    <fullName>NON_WORKING__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NON WORKING</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (Parent Account)</relationshipLabel>
    <relationshipName>NON_WORKING</relationshipName>
    <type>Lookup</type>
</CustomField>