sandbox-codebase/objects/Case/fields/Number_of_Nights__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Nights__c</fullName>
    <label>Number of Nights</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>