sandbox-codebase/objects/Case/fields/Number_of_Studies__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Studies__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Used with Declarative Lookup Rollup Summaries configuration as Huxley will need to report on billable patient order with at most 1 child study compared to multiple studies.</description>
    <label>Number of Studies</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>