sandbox-codebase/objects/Case/fields/Order_Age__c.field-meta.xml
<CustomField>
    <fullName>Order_Age__c</fullName>
    <formula>NOW () -  CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Age</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>