sandbox-codebase/objects/Case/fields/Order_Turn_Time_Exception__c.field-meta.xml
<CustomField>
    <fullName>Order_Turn_Time_Exception__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Order Turn Time Exception</label>
    <type>Checkbox</type>
</CustomField>