sandbox-codebase/objects/Case/fields/Order_Turnaround_Time_Days__c.field-meta.xml
<CustomField>
    <fullName>Order_Turnaround_Time_Days__c</fullName>
    <description>Represents the time between the order date and the date the order has a billable decision date.</description>
    <formula>IF(ISBLANK(Billable_Decision_Date__c), NULL, Billable_Decision_Date__c - CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Turnaround Time (Days)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>