sandbox-codebase/objects/Case/fields/OrderID__c.field-meta.xml
<CustomField>
    <fullName>OrderID__c</fullName>
    <description>OrderID of the Order being entered</description>
    <externalId>true</externalId>
    <inlineHelpText>OrderID of the Order being entered</inlineHelpText>
    <label>OrderID</label>
    <length>6</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>