sandbox-codebase/objects/Case/fields/Packaged_Date_1st_study__c.field-meta.xml
<CustomField>
    <fullName>Packaged_Date_1st_study__c</fullName>
    <label>Packaged Date (1st study)</label>
    <type>DateTime</type>
</CustomField>