sandbox-codebase/objects/Case/fields/Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (Parent Account)</relationshipLabel>
    <relationshipName>Parent_Account_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>