sandbox-codebase/objects/Case/fields/Provider_Account__c.field-meta.xml
<CustomField>
    <fullName>Provider_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The ordering facility associated with the ordering physician.</inlineHelpText>
    <label>Provider Account</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Value does not exist or does not match filter criteria. The facility must not be a person account.</errorMessage>
        <filterItems>
            <field>Account.IsPersonAccount</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Patient Orders (Provider Account)</relationshipLabel>
    <relationshipName>PatientOrderProviderAccount</relationshipName>
    <type>Lookup</type>
</CustomField>