sandbox-codebase/objects/Case/fields/SANSA_GO__c.field-meta.xml
<CustomField>
    <fullName>SANSA_GO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SANSA GO</label>
    <type>Checkbox</type>
</CustomField>