sandbox-codebase/objects/Case/fields/Shipping_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Carrier__c</fullName>
    <label>Shipping Carrier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USPS</fullName>
            </value>
            <value>
                <fullName>UPS</fullName>
            </value>
            <value>
                <fullName>FedEx</fullName>
            </value>
            <value>
                <fullName>DHL</fullName>
            </value>
            <value>
                <fullName>Not Shipped</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>