sandbox-codebase/objects/Case/fields/SMS_Journey_Launched__c.field-meta.xml
<CustomField>
    <fullName>SMS_Journey_Launched__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in record triggered flow to trigger an update on the Patient record to send the opt in Mogli SMS Message</description>
    <label>SMS Journey Launched?</label>
    <type>Checkbox</type>
</CustomField>