sandbox-codebase/objects/Case/fields/Unbillable_Reason__c.field-meta.xml
<CustomField>
    <fullName>Unbillable_Reason__c</fullName>
    <inlineHelpText>Unresponsive Patient - Pre-ship: Can&apos;t reach patient to schedule shipping/contact info incorrect
Unresponsive Patient - Post-ship: Patient held device for 30 days or more and is unresponsive
Contraindicated - Order level, patient has permanent pace maker, etc
Multiple Unsuccessful Studies - Patient has 2+ unsuccessful studies
Patient Refusal - Pre-ship: patient indicates they don&apos;t want to test or want to delay
Patient Refusal - Post-ship: patient indicates they won&apos;t take test after receiving</inlineHelpText>
    <label>Unbillable Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contraindicated</fullName>
            </value>
            <value>
                <fullName>Multiple Unsuccessful Studies</fullName>
            </value>
            <value>
                <fullName>Patient Refusal: Post-ship</fullName>
            </value>
            <value>
                <fullName>Patient Refusal: Pre-ship</fullName>
            </value>
            <value>
                <fullName>Patient Unresponsive: Post-Ship</fullName>
            </value>
            <value>
                <fullName>Patient Unresponsive: Pre-Ship</fullName>
            </value>
            <value>
                <fullName>Provider Cancelled Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>