sandbox-codebase/objects/Case/recordTypes/Patient_Order.recordType-meta.xml
<RecordType>
    <fullName>Patient_Order</fullName>
    <active>true</active>
    <businessProcess>Patient Order Process</businessProcess>
    <label>Patient Order</label>
</RecordType>