sandbox-codebase/objects/Case/listViews/AllOpenCases.listView-meta.xml
<ListView>
    <fullName>AllOpenCases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>OrderID__c</columns>
    <columns>NAME</columns>
    <columns>CASES.STATUS</columns>
    <columns>Billable_Status__c</columns>
    <columns>Billable_Decision_Date__c</columns>
    <columns>Provider_Account__c</columns>
    <columns>Ordering_Physician__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Billable_Status__c</field>
        <operation>equals</operation>
    </filters>
    <label>All Open Cases</label>
</ListView>