sandbox-codebase/objects/Case/listViews/Orders_Needing_Outreach_Initiate_Study.listView-meta.xml
<ListView>
    <fullName>Orders_Needing_Outreach_Initiate_Study</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>Provider_Account__c</columns>
    <columns>Ordering_Physician__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>Order_Date__c</columns>
    <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Ordered</value>
    </filters>
    <filters>
        <field>Number_of_Studies__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Orders Needing Study</label>
</ListView>