sandbox-codebase/objects/Case/listViews/Patient_Orders_Case.listView-meta.xml
<ListView>
    <fullName>Patient_Orders_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Patient Orders</label>
    <queue>Patient_Orders</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>